--- a/src/styles/gamelist.css
+++ b/src/styles/gamelist.css
@@ -1,104 +1,95 @@
 body {
-    background: #2f2f2f
+    background-color: #f0f0f0;
 }
 
-.container {
-    width: 80%;
-    margin: 0 auto;
-}
-
-.addGame {
-    background-color: #4caf50;
-    color: white;
-    padding: 10px 10px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    width: 100px;
-    margin: auto;
-}
-
-.addGame:hover {
-    box-shadow: 2px 2px 5px #4caf50;
-}
-
-.gameList {
-    margin-top: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.gameBox {
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px;
-    margin-bottom: 10px;
+.top-bar {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    background: white;
-    width: 75%;
+    margin-bottom: 20px;
 }
 
-.gameBox:hover {
-    border: 1px solid #2f2f2f;
-    box-shadow: 0 2px 10px white;
-}
-
-.gameInfo {
-    display: flex;
-}
-
-.gameIndex {
-    font-weight: bold;
+.search-bar {
+    flex-grow: 1;
     margin-right: 10px;
 }
 
-.gameTitle {
-    font-size: 18px;
-}
-
-.gameActions {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.gameActions button {
-    width: 50px;
-    height: 50px;
-    margin-left: 10px;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
-    padding: 0px;
-    font-size: 30px;
+.add-game-btn {
+    padding: 10px 20px;
+    background-color: #535bf2;
     color: white;
 }
 
-.gameActions button:first-child {
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card {
+    width: 200px;
+    height: 300px;
+    margin: 10px;
+    position: relative;
+    overflow: hidden;
+    outline: 2px solid #2f2f2f;
+    border-radius: 2px;
+}
+
+.card-content {
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+    transition: opacity 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.card:hover .card-content {
+    background-color: rgba(255, 255, 255, 0.15);
+    backdrop-filter: blur(5px);
+}
+
+.play-btn {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color: #2196f3;
+    color: white;
 }
 
-.gameActions button:first-child:hover {
-    box-shadow: 2px 2px 5px #2196f3;
+.card:hover .play-btn {
+    display: block;
 }
 
-.gameActions button:nth-child(2) {
+.title {
+    display: block;
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+    text-align: center;
+    color: whitesmoke;
+    text-transform: uppercase;
+    font-weight: bold;
+    outline: 2px dashed #2f2f2f;
+    background-color: rgba(255, 255, 255, 0.25);
+    backdrop-filter: blur(5px);
+}
+
+.dots-btn {
+    display: none;
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    padding: 0;
+    top: 10px;
+    right: 10px;
+    color: white;
     background-color: gray;
 }
 
-.gameActions button:nth-child(2):hover {
-    box-shadow: 2px 2px 5px gray;
-}
-
-
-.gameActions button:last-child {
-    background-color: #f44336;
-}
-
-.gameActions button:last-child:hover {
-    box-shadow: 2px 2px 5px #f44336;
+.card:hover .dots-btn {
+    display: block;
 }
