--- a/src/styles/settings.css
+++ b/src/styles/settings.css
@@ -1,22 +1,28 @@
+body {
+    background-color: #f0f0f0;
+}
+
 .settingsContainer {
-    width: 300px;
-    height: 250px;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    background-color: #f0f0f0;
 }
 
 .settingsBox {
     background-color: #f0f0f0;
     border-radius: 5px;
     padding: 20px;
-    width: 300px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    height: 100%;
 }
 
-.settingsBox:hover {
-    box-shadow: 0 2px 10px white;
+.settingsTitle {
+    display: flex;
+    flex-direction: column;
 }
 
 .settingsTitle, .settingsExe {
@@ -40,7 +46,13 @@ input[type="text"]:disabled {
     background-color: #f5f5f5;
 }
 
-#changeExe {
+.settingsButtons {
+    display: flex;
+    justify-content: end;
+    width: calc(100% - 22px);
+}
+
+.changeExeBtn {
     background-color: #4caf50;
     color: white;
     border: none;
@@ -50,6 +62,37 @@ input[type="text"]:disabled {
     margin-top: 20px;
 }
 
-#changeExe {
+.changeExeBtn:hover {
     background-color: #45a049;
+}
+
+.deleteGameBtn {
+    background-color: #f44336;
+    color: white;
+    border: none;
+    border-radius: 3px;
+    padding: 8px 15px;
+    cursor: pointer;
+    margin-top: 20px;
+    margin-right: 10px;
+}
+
+.deleteGameBtn:hover {
+    background-color: darkred;
+}
+
+.backHomeBtn {
+    background-color: gray;
+    color: white;
+    border: none;
+    border-radius: 3px;
+    padding: 0;
+    margin-bottom: 10px;
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+}
+
+.backHomeBtn:hover {
+    background-color: darkgray;
 }
